[package]
name = "zktrie"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
links = "zktrie"

# Companioned with zktrie module: v0.6

[dependencies]

[build-dependencies]
gobuild = { git = "https://github.com/scroll-tech/gobuild.git" }


[dev-dependencies]
hex = "0.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
poseidon-circuit = { git = "https://github.com/kroma-network/poseidon-circuit.git", branch = "feat/upstream-scroll-v0.10.0rc3" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", branch = "feat/upstream-scroll-v0.10.0rc3" }

[features]
dual_codehash = []
default = ["dual_codehash"]
